# sysof

blatt06/: Makefile  blatt06.c  staedte
blatt07/: Makefile  blatt07.c  gemeinden.txt  minimax.cc
blatt09/: CMakeLists.txt  Makefile  colorize.c  colorize.h  iterator.c  iterator.h  main.c  output.c  output.h
blatt10/: CMakeLists.txt  Makefile  heap.c  heap.h  main.c  traverse.c  traverse.h
blatt11/: CMakeLists.txt  Makefile  hash.c  hash.h  main.c  scan.c  scan.h
blatt12/: CMakeLists.txt  Makefile  main.c  mcopy.c  test
