cmake_minimum_required(VERSION 3.3)
project(fractals)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Og -Wall -Wextra")
find_package(PkgConfig REQUIRED)
find_library(M_LIB m)
pkg_check_modules(PIXBUF REQUIRED gdk-pixbuf-2.0)
include_directories(${PIXBUF_INCLUDE_DIRS})
link_directories(${PIXBUF_LIBRARY_DIRS})
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${PIXBUF_CFLAGS} -std=c11")
add_definitions(${PIXBUF_CFLAGS_OTHER})
set(SOURCE_FILES iterator.h iterator.c output.c output.h main.c)
add_executable(fractals ${SOURCE_FILES})
target_link_libraries(${CMAKE_PROJECT_NAME} ${PIXBUF_LDFLAGS} ${M_LIB})
